--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ alphabets/\.ipynb_checkpoints/
 learning python/.ipynb_checkpoints/
 
 lil_problems/.ipynb_checkpoints/
+
+classic/.ipynb_checkpoints/
