Job search strategy simulation

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ learning python/.ipynb_checkpoints/
 lil_problems/.ipynb_checkpoints/
 
 classic/.ipynb_checkpoints/
+
+job search optimizer/.ipynb_checkpoints/
