Board scheduler, public version

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ lil_problems/.ipynb_checkpoints/
 classic/.ipynb_checkpoints/
 
 job search optimizer/.ipynb_checkpoints/
+
+board_scheduler/.ipynb_checkpoints/
