a quick matplotlib animation test

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ classic/.ipynb_checkpoints/
 job search optimizer/.ipynb_checkpoints/
 
 board_scheduler/.ipynb_checkpoints/
+
+bio models/.ipynb_checkpoints/
