more problems + revisions

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ job search optimizer/.ipynb_checkpoints/
 board_scheduler/.ipynb_checkpoints/
 
 bio models/.ipynb_checkpoints/
+
+.ipynb_checkpoints/
